# ResearchOS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DATABASE_IMPLEMENTATION.md  Makefile  README.md  STATE.md  TASK1.3_SUMMARY.md  analyze_completion.py  check_phase1.py  comprehensive_sanity_check.sh  create_phase1_db.py  demo-auth.sh  docker-compose.yml  end_to_end_test.py  fix_auth.py  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml  quickstart-auth.sh  run_manual_tests.sh  run_manual_tests_correct.sh  script.sh  start.sh  test-auth.sh  test-db.sh  test_all_endpoints.sh  test_api_comprehensive.py  test_db.py  test_event_system.py  test_events.sh  test_integration.py  turbo.json  verify_system.sh
apps/api/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/: Dockerfile  README.md  alembic.ini  create_api_keys_table.sql  create_test_users.py  init.sql  pyproject.toml  test_auth_integration.py  test_event_producer_decode.py  test_phase1.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_authentication.py  06776428afc7_add_notebooks_blocks_tables.py  15bd475b2311_add_events_and_processed_events_tables.py  27b3f6581036_add_artifacts_tables.py  2a8f9c1e3d5b_add_block_contents_table.py  3a6b83a39681_add_compute_provider_to_notebooks.py  3b7d9e2f1c4a_add_executions_table.py  3c2b1d550efb_add_ai_session_tables.py  4ad09203efc6_create_nodes_table_for_search.py  61f55875cb77_add_connection_configs_table.py  74427f05f34a_add_edges_table_for_graph_search.py  82de86f1e5bc_add_latex_content_to_papers.py  b3bfeb7339c4_add_papers_tables.py
backend/config/: settings.py
backend/examples/: event_infrastructure_example.py
backend/scripts/: discovery.py  ecosystem.py  evaluator.py  learn.py  memory.py
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py  database.py
backend/tests/: seed_search_data.py  test_artifacts.py  test_ask.py  test_auth_api_keys.py  test_compute_factory.py  test_dlq_retry.py  test_ecosystem.py  test_event_store.py  test_events_experiment_lifecycle.py  test_graph.py  test_logout.py  test_notebooks.py  test_papers.py  test_search.py
sdk/python/: pyproject.toml
sdk/python/researchos/: __init__.py  client.py  experiment.py  (+2 more)
(+238 files in other folders)
