[project]
name = "researchos-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2",
  "psycopg[binary]>=3",
  "alembic>=1.13",
  "pgvector>=0.3",
  "redis>=5",
  "rq>=1.16",
  "boto3>=1.34",
  "httpx>=0.27",
  "pytest>=8",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/researchos_api"]
